--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 
-        <div class="logo-container col-1 col-lg-2 offset-md-1 offset-lg-1 offset-lg-0 float-left">
+        <div class="logo-container col-1 col-lg-2 offset-lg-1 offset-lg-0 float-left">
       <a href="index.html" class="col-12 float-left p-0"><img src="assets/mark.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
       <a href="index.html" class="d-none d-md-2 col-12 float-left p-0"><img src="assets/logo.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
   </div>
@@ -78,7 +78,7 @@ As leaders in all industries continue to search for competitive advantages, they
 
   </div>
 
-<div class="link-container col-10 offset-1">
+<div class="link-container col-10 col-md-8 offset-1 offset-md-2">
   <a href="who-we-are.html" class="link-outline col-12"><p class="col-10">GET TO KNOW US</p>
   <img src="assets/arrow.svg" alt="#" class="col-2">
   </a>
@@ -158,8 +158,8 @@ Our approach is informed by human values—namely, a desire for health and happi
 
 
 
-        </div><!-- CLOSES SCROLL CONTAINER -->
 
+<section class="col-12">
         <footer class="col-12">
           <ul class="col-4 offset-1">
             <li><a href="#"><img src="assets/linkedin.svg" alt="#"></a></li>
@@ -175,7 +175,8 @@ Our approach is informed by human values—namely, a desire for health and happi
               </ul>
 
           </footer>
-
+        </section>
+        </div><!-- CLOSES SCROLL CONTAINER -->
 
 <!-- DROPDOWN MENU SCRIPT
 <script>
