--- a/what-we-do.html
+++ b/what-we-do.html
@@ -54,7 +54,8 @@
 Your browser does not support the video tag.
 </video>
 
-<h1 class="col-11 offset-1">WE ARE<br>MARKET <br><span class="orange-underline">MAKERS</span></h1>
+<h1 class="col-10 offset-1"><span class="delay-1">We are</span><br><span class="delay-2">market</span><br><span class="green-underline delay-3">makers.</span></h1>
+
         </section>
 
 
