--- a/who-we-are.html
+++ b/who-we-are.html
@@ -113,13 +113,13 @@ WHERE<br> WE'RE<br><span class="turquoise-underline">HEADING</span>
 
 
 
-<section class="col-12 featured">
+<section class="col-10 offset-1 featured">
 <span class="top"></span>
 
 
 <div class="container-p col-12">
 
-<div class="animated-container col-10 offset-1">
+<div class="animated-container col-12">
   <div class="text-reveal green-bg">
     <h3>We dare create the future of commercial real estate.</h3>
   </div>
@@ -131,7 +131,7 @@ WHERE<br> WE'RE<br><span class="turquoise-underline">HEADING</span>
 
 
 <div class="container-p col-12">
-<div class="animated-container col-10 offset-1">
+<div class="animated-container col-12">
   <div class="text-reveal turquoise-bg">
     <h3>We are our only benchmark.</h3>
   </div>
@@ -142,7 +142,7 @@ WHERE<br> WE'RE<br><span class="turquoise-underline">HEADING</span>
 </div>
 
 <div class="container-p col-12">
-<div class="animated-container col-10 offset-1">
+<div class="animated-container col-12">
   <div class="text-reveal orange-bg">
     <h3>We make timeless luxury a daily experience.</h3>
   </div>
