--- a/who-we-are.html
+++ b/who-we-are.html
@@ -17,32 +17,33 @@
 
 
 
-      <div class="logo-container col-1 col-md-4 col-lg-2 offset-lg-3 offset-md-4 offset-lg-0 float-left">
-    <a href="index.html" class="col-12 float-left p-0"><img src="assets/mark.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
-    <a href="index.html" class="d-none d-md-2 col-12 float-left p-0"><img src="assets/logo.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
-</div>
-    <h5 class="col-8">A Luxury Real Estate Firm</h5>
+        <div class="logo-container col-1 col-lg-2 offset-lg-1 offset-lg-0 float-left">
+      <a href="index.html" class="col-12 float-left p-0"><img src="assets/mark.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
+      <a href="index.html" class="d-none d-md-2 col-12 float-left p-0"><img src="assets/logo.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
+  </div>
+      <h5 class="col-8">A Luxury Real Estate Firm</h5>
 
 
-    <div class="menu-container col-1 offset-1 offset-md-3 d-lg-none">
-    <a onclick="myFunction()" class="col-12 float-left"><img src="assets/menu.svg" alt="Dropdown Menu" class="dropdown-menu-custom"></a>
-    </div>
+      <div class="menu-container col-1 offset-1 d-lg-none">
+      <a onclick="myFunction()" class="col-12 float-left"><img src="assets/menu.svg" alt="Dropdown Menu" class="dropdown-menu-custom"></a>
+      </div>
 
       </header>
 
-      <nav class="col-12" id="nav">
-        <ul class="main-nav col-10 offset-1">
+      <nav class="col-12 col-lg-10 offset-lg-2" id="nav">
+        <ul class="main-nav col-10 col-lg-6 offset-1 offset-lg-2">
           <li class="nav-item-1"><a href="who-we-are.html"><span id="active">WHO WE ARE</span></a></li>
           <li class="nav-item-2"><a href="what-we-do.html">WHAT WE DO</a></li>
           <li class="nav-item-3"><a href="portfolio.html">PORTFOLIO</a></li>
           </ul>
 
-          <ul class="secondary-nav col-10 offset-1">
+          <ul class="secondary-nav col-10 col-lg-4 offset-1 offset-lg-0">
             <li class="nav-item-4"><a href="#">SCHEDULE A TOUR</a></li>
             <li class="nav-item-5"><a href="#">MEMBERS</a></li>
             </ul>
 
           </nav>
+
 
 <div class="scroll-container col-12 p-0" id="who-we-are">
       <section class="col-12" id="container-1">
@@ -59,23 +60,23 @@ Your browser does not support the video tag.
 
 
 
-<section class="col-12" id="container-2">
+<section class="col-10 col-md-8 offset-1 offset-md-2" id="container-2">
 <span class="top"></span>
 
 
 
-  <h2 class="col-10 offset-1">WHERE WE
+  <h2 class="col-12">WHERE WE
     <br>
 
 <span class="green-underline">CAME FROM</span></h2>
 
 <div class="copy-container col-12">
-<p class="col-10 offset-1">
+<p class="col-12">
 We are inspired by our past, but more motivated by our future. Our identity was born in 1956 in a Bon Air garage when two roofers envisioned a better future. They got down off the roof, built a team, built trust, and built a business. The entrepreneurial mindset of Duke Burns & John Scalo is present in everything we do.
 </p>
   </div>
 
-  <div class="link-container col-10 offset-1">
+  <div class="link-container col-12">
     <a href="who-we-are.html" class="link-outline col-12"><p class="col-10">GET TO KNOW US</p>
     <img src="assets/arrow.svg" alt="#" class="col-2">
     </a>
@@ -98,7 +99,7 @@ We are inspired by our past, but more motivated by our future. Our identity was 
 
 <section class="col-12 p-0" id="push-2-pt2-mobile">
 
-  <div class="reveal-container col-10 col-lg-3 offset-1">
+  <div class="reveal-container col-10 col-md-8 col-lg-3 offset-1 offset-md-2">
   <h2 class="col-12">
 WHERE<br> WE'RE<br><span class="turquoise-underline">HEADING</span>
     </h2>
@@ -113,7 +114,7 @@ WHERE<br> WE'RE<br><span class="turquoise-underline">HEADING</span>
 
 
 
-<section class="col-10 offset-1 featured">
+<section class="col-10 col-md-8 offset-1 offset-md-2 featured">
 <span class="top"></span>
 
 
