--- a/management.html
+++ b/management.html
@@ -17,11 +17,11 @@
 
 
 
-        <div class="logo-container col-1 col-xl-2 offset-lg-0 offset-lg-0 float-left">
-      <a href="index.html" class="col-12 float-left p-0 d-xl-none"><img src="assets/mark.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
-      <a href="index.html" class="d-none d-xl-block d-md-2 col-12 float-left p-0"><img src="assets/logo.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
+        <div class="logo-container col-1 col-lg-2 offset-lg-1 offset-lg-0 float-left">
+      <a href="index.html" class="col-12 float-left p-0"><img src="assets/mark.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
+      <a href="index.html" class="d-none d-md-2 col-12 float-left p-0"><img src="assets/logo.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
   </div>
-      <h5 class="col-8 col-lg-4">A Luxury Real Estate Firm</h5>
+      <h5 class="col-8">A Luxury Real Estate Firm</h5>
 
 
       <div class="menu-container col-1 offset-1 d-lg-none">
@@ -30,14 +30,14 @@
 
       </header>
 
-      <nav class="col-12 col-lg-10 col-xl-9 offset-lg-2 offset-xl-3" id="nav">
-        <ul class="main-nav col-10 col-lg-6 col-xl-5 offset-1 offset-xl-2">
+      <nav class="col-12 col-lg-10 offset-lg-2" id="nav">
+        <ul class="main-nav col-10 col-lg-6 offset-1 offset-lg-2">
           <li class="nav-item-1"><a href="who-we-are.html">WHO WE ARE</a></li>
           <li class="nav-item-2"><a href="what-we-do.html">WHAT WE DO</a></li>
           <li class="nav-item-3"><a href="portfolio.html">PORTFOLIO</a></li>
           </ul>
 
-          <ul class="secondary-nav col-10 col-lg-4 col-xl-5 offset-1 offset-lg-0">
+          <ul class="secondary-nav col-10 col-lg-4 offset-1 offset-lg-0">
             <li class="nav-item-4"><a href="#">SCHEDULE A TOUR</a></li>
             <li class="nav-item-5"><a href="#">MEMBERS</a></li>
             </ul>
@@ -66,17 +66,19 @@ Your browser does not support the video tag.
 
 
 
-  <h2 class="col-10 col-md-8 col-lg-4 col-xl-5 offset-1 offset-md-2 offset-xl-0">ELEVATING
+  <h2 class="col-10 col-md-8 offset-1 offset-md-2">ELEVATING
 <br>
 <span class="green-underline">EXPERIENCE</span></h2>
-
-<div class="copy-container col-12 col-lg-8 col-xl-6 offset-lg-2 offset-xl-0">
-<p class="col-10 col-md-8 col-lg-12 col-xl-10 offset-1 offset-md-2 offset-lg-0 ">
+<div class="copy-container col-12">
+<p class="col-10 col-md-8 offset-1 offset-md-2">
 As leaders in all industries continue to search for competitive advantages, they continue to overlook the most effective weapon in their arsenal—their workplace. We create spaces that people want to come to, not just have to. Dynamic spaces that not only attract today’s brightest talent but also spark motivation, innovation, happiness, and loyalty for years to come.
 </p>
+
+
+
   </div>
 
-<div class="link-container col-10 col-md-8 col-xl-5 offset-1 offset-md-2 offset-xl-5">
+<div class="link-container col-10 col-md-8 offset-1 offset-md-2">
   <a href="who-we-are.html" class="link-outline col-12"><p class="col-10">GET TO KNOW US</p>
   <img src="assets/arrow.svg" alt="#" class="col-2">
   </a>
@@ -86,20 +88,20 @@ As leaders in all industries continue to search for competitive advantages, they
 
 
 
-<section class="col-12 p-0 d-none d-xl-block">
+<section class="col-12 p-0 d-none d-lg-block">
 <embed class="col-12 p-0" src="push-1.html" id="cover-1">
 </section>
 
 
-<section class="col-12 p-0 d-xl-none" id="push-mobile">
+<section class="col-12 p-0" id="push-mobile">
 <img src="assets/images/push-1.svg" alt="#">
 </section>
 
 
 
-<section class="col-12 p-0 d-xl-none" id="push-1-pt2-mobile">
+<section class="col-12 p-0" id="push-1-pt2-mobile">
 
-  <div class="reveal-container col-10 col-md-8 col-lg-3 offset-1 offset-md-2">
+  <div class="reveal-container col-10 col-lg-3 offset-1">
   <h2 class="col-12">
 PUTTING<br>PEOPLE<br><span class="turquoise-underline">FIRST</span>
     </h2>
@@ -114,10 +116,10 @@ Our approach is informed by human values—namely, a desire for health and happi
 </section>
 
 
-<section class="featured-projects col-12 col-lg-10 offset-lg-1" id="featured-projects">
+<section class="featured-projects col-12" id="featured-projects">
 
 
-<div class="container-p col-10 col-md-6 col-lg-4 offset-1 offset-md-3 offset-lg-0 float-left">
+<div class="container-p col-10 col-md-4 col-lg-3 offset-1 float-left">
   <div class="portfolio-list col-12 float-left">
     <a href="#">
       <div class="col-12 p-0 portfolio-image-container">
@@ -129,7 +131,7 @@ Our approach is informed by human values—namely, a desire for health and happi
 </div>
 
 
-<div class="container-p col-10 col-md-6 col-lg-4 offset-1 offset-md-3 offset-lg-0 float-left">
+<div class="container-p col-10 col-md-4 col-lg-3 offset-1 float-left">
 <div class="portfolio-list col-12 float-left">
   <a href="#">
     <div class="col-12 p-0 portfolio-image-container">
@@ -140,7 +142,7 @@ Our approach is informed by human values—namely, a desire for health and happi
 </div>
 </div>
 
-<div class="container-p col-10 col-md-6 col-lg-4 offset-1 offset-md-3 offset-lg-0 float-left">
+<div class="container-p col-10 col-md-4 col-lg-3 offset-1 float-left">
 <div class="portfolio-list col-12 float-left">
   <a href="#">
     <div class="col-12 p-0 portfolio-image-container">
@@ -155,23 +157,9 @@ Our approach is informed by human values—namely, a desire for health and happi
 </section>
 
 
-<footer class="col-12">
-  <ul class="col-4 offset-1">
-    <li><a href="#"><img src="assets/linkedin.svg" alt="#"></a></li>
-    <li><a href="#"><img src="assets/instagram.svg" alt="#"></a></li>
-    </ul>
 
 
-    <ul class="col-7">
-      <li><a href="#">BLOG</a></li>
-      <li><a href="#">NEWS</a></li>
-      <li><a href="#">CAREERS</a></li>
-      <li><a href="#">TENANT PERKS</a></li>
-      </ul>
-
-  </footer>
-
-<section class="col-12 d-xl-none">
+<section class="col-12">
         <footer class="col-12">
           <ul class="col-4 offset-1">
             <li><a href="#"><img src="assets/linkedin.svg" alt="#"></a></li>
