--- a/what-we-do.html
+++ b/what-we-do.html
@@ -33,7 +33,7 @@
       <nav class="col-12" id="nav">
         <ul class="main-nav col-10 offset-1">
           <li class="nav-item-1"><a href="who-we-are.html">WHO WE ARE</a></li>
-          <li class="nav-item-2"><a href="what-we-do.html"><span id="active">WHAT WE DO</span></a></li>
+          <li class="nav-item-2" id="active"><a href="what-we-do.html">WHAT WE DO</a></li>
           <li class="nav-item-3"><a href="portfolio.html">PORTFOLIO</a></li>
           </ul>
 
