--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
       </header>
 
       <nav class="col-12 col-lg-10 col-xl-9 offset-lg-2 offset-xl-3" id="nav">
-        <ul class="main-nav col-10 col-lg-6 col-xl-5 offset-1 offset-xl-2">
+        <ul class="main-nav col-10 col-lg-6 col-xl-6 offset-1 offset-xl-2">
           <li class="nav-item-1"><a href="who-we-are.html">WHO WE ARE</a></li>
           <li class="nav-item-2"><a href="what-we-do.html">WHAT WE DO</a></li>
           <li class="nav-item-3"><a href="portfolio.html">PORTFOLIO</a></li>
           </ul>
 
-          <ul class="secondary-nav col-10 col-lg-4 col-xl-5 offset-1 offset-lg-0">
+          <ul class="secondary-nav col-10 col-lg-4 col-xl-4 offset-1 offset-lg-0">
             <li class="nav-item-4"><a href="#">SCHEDULE A TOUR</a></li>
             <li class="nav-item-5"><a href="#">MEMBERS</a></li>
             </ul>
@@ -156,13 +156,13 @@ Our approach is informed by human values—namely, a desire for health and happi
 
 
 <footer class="col-12">
-  <ul class="col-4 offset-1">
+  <ul class="col-4 d-none d-xl-block">
     <li><a href="#"><img src="assets/linkedin.svg" alt="#"></a></li>
     <li><a href="#"><img src="assets/instagram.svg" alt="#"></a></li>
     </ul>
 
 
-    <ul class="col-7">
+    <ul class="footer-nav col-4 offset-4">
       <li><a href="#">BLOG</a></li>
       <li><a href="#">NEWS</a></li>
       <li><a href="#">CAREERS</a></li>
