--- a/who-we-are.html
+++ b/who-we-are.html
@@ -17,11 +17,11 @@
 
 
 
-        <div class="logo-container col-1 col-lg-2 offset-lg-1 offset-lg-0 float-left">
-      <a href="index.html" class="col-12 float-left p-0"><img src="assets/mark.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
-      <a href="index.html" class="d-none d-md-2 col-12 float-left p-0"><img src="assets/logo.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
+        <div class="logo-container col-1 col-xl-2 offset-lg-0 offset-lg-0 float-left">
+      <a href="index.html" class="col-12 float-left p-0 d-xl-none"><img src="assets/mark.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
+      <a href="index.html" class="d-none d-xl-block d-md-2 col-12 float-left p-0"><img src="assets/logo.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
   </div>
-      <h5 class="col-8">A Luxury Real Estate Firm</h5>
+      <h5 class="col-8 col-lg-4">A Luxury Real Estate Firm</h5>
 
 
       <div class="menu-container col-1 offset-1 d-lg-none">
@@ -30,14 +30,14 @@
 
       </header>
 
-      <nav class="col-12 col-lg-10 offset-lg-2" id="nav">
-        <ul class="main-nav col-10 col-lg-6 offset-1 offset-lg-2">
-          <li class="nav-item-1"><a href="who-we-are.html"><span id="active">WHO WE ARE</span></a></li>
+      <nav class="col-12 col-lg-10 col-xl-9 offset-lg-2 offset-xl-3" id="nav">
+        <ul class="main-nav col-10 col-lg-6 col-xl-6 offset-1 offset-xl-2">
+          <li class="nav-item-1"><span id="active"><a href="who-we-are.html">WHO WE ARE</span></a></li>
           <li class="nav-item-2"><a href="what-we-do.html">WHAT WE DO</a></li>
           <li class="nav-item-3"><a href="portfolio.html">PORTFOLIO</a></li>
           </ul>
 
-          <ul class="secondary-nav col-10 col-lg-4 offset-1 offset-lg-0">
+          <ul class="secondary-nav col-10 col-lg-4 col-xl-4 offset-1 offset-lg-0">
             <li class="nav-item-4"><a href="#">SCHEDULE A TOUR</a></li>
             <li class="nav-item-5"><a href="#">MEMBERS</a></li>
             </ul>
