--- a/what-we-do.html
+++ b/what-we-do.html
@@ -17,32 +17,33 @@
 
 
 
-      <div class="logo-container col-1 col-md-4 col-lg-2 offset-lg-3 offset-md-4 offset-lg-0 float-left">
-    <a href="index.html" class="col-12 float-left p-0"><img src="assets/mark.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
-    <a href="index.html" class="d-none d-md-2 col-12 float-left p-0"><img src="assets/logo.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
-</div>
-    <h5 class="col-8">A Luxury Real Estate Firm</h5>
+        <div class="logo-container col-1 col-xl-2 offset-lg-0 offset-lg-0 float-left">
+      <a href="index.html" class="col-12 float-left p-0 d-xl-none"><img src="assets/mark.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
+      <a href="index.html" class="d-none d-xl-block d-md-2 col-12 float-left p-0"><img src="assets/logo.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
+  </div>
+      <h5 class="col-8 col-lg-4">A Luxury Real Estate Firm</h5>
 
 
-    <div class="menu-container col-1 offset-1 offset-md-3 d-lg-none">
-    <a onclick="myFunction()" class="col-12 float-left"><img src="assets/menu.svg" alt="Dropdown Menu" class="dropdown-menu-custom"></a>
-    </div>
+      <div class="menu-container col-1 offset-1 d-lg-none">
+      <a onclick="myFunction()" class="col-12 float-left"><img src="assets/menu.svg" alt="Dropdown Menu" class="dropdown-menu-custom"></a>
+      </div>
 
       </header>
 
-      <nav class="col-12" id="nav">
-        <ul class="main-nav col-10 offset-1">
+      <nav class="col-12 col-lg-10 col-xl-9 offset-lg-2 offset-xl-3" id="nav">
+        <ul class="main-nav col-10 col-lg-6 col-xl-6 offset-1 offset-xl-2">
           <li class="nav-item-1"><a href="who-we-are.html">WHO WE ARE</a></li>
           <li class="nav-item-2" id="active"><a href="what-we-do.html">WHAT WE DO</a></li>
           <li class="nav-item-3"><a href="portfolio.html">PORTFOLIO</a></li>
           </ul>
 
-          <ul class="secondary-nav col-10 offset-1">
+          <ul class="secondary-nav col-10 col-lg-4 col-xl-4 offset-1 offset-lg-0">
             <li class="nav-item-4"><a href="#">SCHEDULE A TOUR</a></li>
             <li class="nav-item-5"><a href="#">MEMBERS</a></li>
             </ul>
 
           </nav>
+
 
 <div class="scroll-container col-12 p-0" id="what-we-do">
       <section class="col-12" id="container-1">
@@ -60,7 +61,7 @@ Your browser does not support the video tag.
 
 
 
-<section class="col-12" id="container-2">
+<section class="col-10 col-md-8 offset-1 offset-md-2" id="container-2">
 
   <h2 class="col-10 offset-1">DELIVERING
     <br>
