--- a/who-we-are.html
+++ b/who-we-are.html
@@ -32,7 +32,7 @@
 
       <nav class="col-12 col-lg-10 col-xl-9 offset-lg-2 offset-xl-3" id="nav">
         <ul class="main-nav col-10 col-lg-6 col-xl-6 offset-1 offset-xl-2">
-          <li class="nav-item-1"><span id="active"><a href="who-we-are.html">WHO WE ARE</span></a></li>
+          <li class="nav-item-1" id="active"><a href="who-we-are.html">WHO WE ARE</a></li>
           <li class="nav-item-2"><a href="what-we-do.html">WHAT WE DO</a></li>
           <li class="nav-item-3"><a href="portfolio.html">PORTFOLIO</a></li>
           </ul>
@@ -60,18 +60,18 @@ Your browser does not support the video tag.
 
 
 
-<section class="col-10 col-md-8 offset-1 offset-md-2" id="container-2">
-<span class="top"></span>
+        <section class="col-12" id="container-2">
+        <span class="top"></span>
 
 
 
-  <h2 class="col-12">WHERE WE
+  <h2 class="col-10 col-md-8 col-lg-4 col-xl-5 offset-1 offset-md-2 offset-xl-0">WHERE WE
     <br>
 
 <span class="green-underline">CAME FROM</span></h2>
 
-<div class="copy-container col-12">
-<p class="col-12">
+<div class="copy-container col-12 col-lg-8 col-xl-6 offset-lg-2 offset-xl-0">
+<p class="col-10 col-md-8 col-lg-12 col-xl-10 offset-1 offset-md-2 offset-lg-0 ">
 We are inspired by our past, but more motivated by our future. Our identity was born in 1956 in a Bon Air garage when two roofers envisioned a better future. They got down off the roof, built a team, built trust, and built a business. The entrepreneurial mindset of Duke Burns & John Scalo is present in everything we do.
 </p>
   </div>
