--- a/portfolio.html
+++ b/portfolio.html
@@ -17,41 +17,41 @@
 
 
 
-      <div class="logo-container col-1 col-md-4 col-lg-2 offset-lg-3 offset-md-4 offset-lg-0 float-left">
-    <a href="index.html" class="col-12 float-left p-0"><img src="assets/mark.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
-    <a href="index.html" class="d-none d-md-2 col-12 float-left p-0"><img src="assets/logo.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
-</div>
-    <h5 class="col-8">A Luxury Real Estate Firm</h5>
+        <div class="logo-container col-1 col-xl-2 offset-lg-0 offset-lg-0 float-left">
+      <a href="index.html" class="col-12 float-left p-0 d-xl-none"><img src="assets/mark.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
+      <a href="index.html" class="d-none d-xl-block d-md-2 col-12 float-left p-0"><img src="assets/logo.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
+  </div>
+      <h5 class="col-8 col-lg-4">A Luxury Real Estate Firm</h5>
 
 
-    <div class="menu-container col-1 offset-1 offset-md-3 d-lg-none">
-    <a onclick="myFunction()" class="col-12 float-left"><img src="assets/menu.svg" alt="Dropdown Menu" class="dropdown-menu-custom"></a>
-    </div>
+      <div class="menu-container col-1 offset-1 d-lg-none">
+      <a onclick="myFunction()" class="col-12 float-left"><img src="assets/menu.svg" alt="Dropdown Menu" class="dropdown-menu-custom"></a>
+      </div>
 
       </header>
 
-      <nav class="col-12" id="nav">
-        <ul class="main-nav col-10 offset-1">
+      <nav class="col-12 col-lg-10 col-xl-9 offset-lg-2 offset-xl-3" id="nav">
+        <ul class="main-nav col-10 col-lg-6 col-xl-6 offset-1 offset-xl-2">
           <li class="nav-item-1"><a href="who-we-are.html">WHO WE ARE</a></li>
           <li class="nav-item-2"><a href="what-we-do.html">WHAT WE DO</a></li>
-          <li class="nav-item-3"><a href="portfolio.html"><span id="active">PORTFOLIO</span></a></li>
+          <li class="nav-item-3" id="active"><a href="portfolio.html">PORTFOLIO</a></li>
           </ul>
 
-          <ul class="secondary-nav col-10 offset-1">
+          <ul class="secondary-nav col-10 col-lg-4 col-xl-4 offset-1 offset-lg-0">
             <li class="nav-item-4"><a href="#">SCHEDULE A TOUR</a></li>
             <li class="nav-item-5"><a href="#">MEMBERS</a></li>
             </ul>
 
           </nav>
 
-          <div class="aside-toggle col-12">
+          <div class="aside-toggle col-12 d-xl-none">
           <a onclick="myFunction()" class="col-12 float-left">SEARCH FILTERS</a>
           </div>
 
 
 
             <div class="col-12 p-0" id="portfolio">
-            <aside class="col-12 col-lg-3 float-left p-0">
+            <aside class="col-12 col-lg-3 float-left p-0 d-none d-xl-block">
 
               <form class="col-8 offset-2 float-left">
                 <h2>PROPERTIES</h2>
@@ -77,9 +77,9 @@
               </aside>
 
 
-            <section class="col-12 col-lg-9 float-left">
+            <div class="portfolio-container col-12 col-lg-9 float-left">
 
-            <div class="container-p col-12 col-md-4 col-lg-3 float-left">
+            <div class="container-p col-12 col-md-4 col-lg-4 float-left">
               <div class="portfolio-list col-12 float-left">
                 <a href="portfolio-beacon.html">
                   <div class="col-12 p-0 portfolio-image-container">
@@ -92,7 +92,7 @@
             </div>
 
 
-            <div class="container-p col-12 col-md-4 col-lg-3 float-left">
+            <div class="container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="portfolio-riviera.html">
                 <div class="col-12 p-0 portfolio-image-container">
@@ -104,7 +104,7 @@
             </div>
             </div>
 
-            <div class="container-p col-12 col-md-4 col-lg-3 float-left">
+            <div class="container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="#">
                 <div class="col-12 p-0 portfolio-image-container">
@@ -119,7 +119,7 @@
 
 
 
-            <div class="container-p col-12 col-md-4 col-lg-3 float-left">
+            <div class="container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="#">
                 <div class="col-12 p-0 portfolio-image-container">
@@ -131,7 +131,7 @@
             </div>
             </div>
 
-            <div class="container-p col-12 col-md-4 col-lg-3 float-left">
+            <div class="container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="#">
                 <div class="col-12 p-0 portfolio-image-container">
@@ -143,7 +143,7 @@
             </div>
             </div>
 
-            <div class="container-p col-12 col-md-4 col-lg-3 float-left">
+            <div class="container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="portfolio-riviera.html">
                 <div class="col-12 p-0 portfolio-image-container">
@@ -155,7 +155,7 @@
             </div>
             </div>
 
-            <div class="container-p col-12 col-md-4 col-lg-3 float-left">
+            <div class="container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="#">
                 <div class="col-12 p-0 portfolio-image-container">
@@ -167,7 +167,7 @@
             </div>
             </div>
 
-            <div class="container-p col-12 col-md-4 col-lg-3 float-left">
+            <div class="container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="#">
                 <div class="col-12 p-0 portfolio-image-container">
@@ -179,7 +179,7 @@
             </div>
             </div>
 
-            </section>
+          </div>
             </div>
 
 
