--- a/what-we-do.html
+++ b/what-we-do.html
@@ -61,21 +61,23 @@ Your browser does not support the video tag.
 
 
 
-<section class="col-10 col-md-8 offset-1 offset-md-2" id="container-2">
+        <section class="col-12" id="container-2">
+        <span class="top"></span>
 
-  <h2 class="col-10 offset-1">DELIVERING
+
+
+  <h2 class="col-10 col-md-8 col-lg-4 col-xl-5 offset-1 offset-md-2 offset-xl-0">DELIVERING
     <br>
 <span class="green-underline">LUXURY</span></h2>
 
-<div class="copy-container col-12">
-
-<p class="col-10 offset-1">
+<div class="copy-container col-12 col-lg-8 col-xl-6 offset-lg-2 offset-xl-0">
+<p class="col-10 col-md-8 col-lg-12 col-xl-10 offset-1 offset-md-2 offset-lg-0 ">
 As leaders in all industries continue to search for competitive advantages, they continue to overlook the most effective weapon in their arsenal—their workplace. That’s where we come in. We create spaces that people want to come to, not just have to. Dynamic spaces that not only attract today’s brightest talent but also spark motivation, innovation, happiness, and loyalty for years to come.
 </p>
 
 </div>
 
-<div class="link-container col-10 offset-1">
+  <div class="link-container col-10 col-md-8 col-xl-5 offset-1 offset-md-2 offset-xl-5">
 
   <a href="#" class="col-12 link-outline-2"><p class="col-10">BROKERAGE</p>
 <img src="assets/arrow.svg" alt="#" class="col-2">
