--- a/who-we-are.html
+++ b/who-we-are.html
@@ -76,7 +76,7 @@ We are inspired by our past, but more motivated by our future. Our identity was 
 </p>
   </div>
 
-  <div class="link-container col-12">
+  <div class="link-container col-10 col-md-8 col-xl-5 offset-1 offset-md-2 offset-xl-5">
     <a href="who-we-are.html" class="link-outline col-12"><p class="col-10">GET TO KNOW US</p>
     <img src="assets/arrow.svg" alt="#" class="col-2">
     </a>
@@ -86,18 +86,18 @@ We are inspired by our past, but more motivated by our future. Our identity was 
 
 
 
-<section class="col-12 p-0 d-none d-lg-block">
+<section class="col-12 p-0 d-none d-xl-block">
 <embed class="col-12 p-0" src="push-2.html" id="cover-1">
 
 </section>
 
 
-<section class="col-12 p-0" id="push-mobile">
+<section class="col-12 p-0 d-xl-none" id="push-mobile">
 <img src="assets/images/push-2.svg" alt="#">
 </section>
 
 
-<section class="col-12 p-0" id="push-2-pt2-mobile">
+<section class="col-12 p-0 d-xl-none" id="push-2-pt2-mobile">
 
   <div class="reveal-container col-10 col-md-8 col-lg-3 offset-1 offset-md-2">
   <h2 class="col-12">
@@ -114,12 +114,14 @@ WHERE<br> WE'RE<br><span class="turquoise-underline">HEADING</span>
 
 
 
-<section class="col-10 col-md-8 offset-1 offset-md-2 featured">
+<section class="featured-projects col-12 col-lg-10 offset-lg-1" id="featured-projects">
+
+
+
 <span class="top"></span>
 
 
-<div class="container-p col-12">
-
+<div class="container-p col-10 col-md-6 col-lg-4 offset-1 offset-md-3 offset-lg-0 float-left">
 <div class="animated-container col-12">
   <div class="text-reveal green-bg">
     <h3>We dare create the future of commercial real estate.</h3>
@@ -131,7 +133,7 @@ WHERE<br> WE'RE<br><span class="turquoise-underline">HEADING</span>
 </div>
 
 
-<div class="container-p col-12">
+<div class="container-p col-10 col-md-6 col-lg-4 offset-1 offset-md-3 offset-lg-0 float-left">
 <div class="animated-container col-12">
   <div class="text-reveal turquoise-bg">
     <h3>We are our only benchmark.</h3>
@@ -142,7 +144,8 @@ WHERE<br> WE'RE<br><span class="turquoise-underline">HEADING</span>
 </div>
 </div>
 
-<div class="container-p col-12">
+
+<div class="container-p col-10 col-md-6 col-lg-4 offset-1 offset-md-3 offset-lg-0 float-left">
 <div class="animated-container col-12">
   <div class="text-reveal orange-bg">
     <h3>We make timeless luxury a daily experience.</h3>
