--- a/what-we-do.html
+++ b/what-we-do.html
@@ -107,13 +107,13 @@ As leaders in all industries continue to search for competitive advantages, they
 
 
 
-<section class="zoom-1 col-12 p-0" id="push-3-mobile">
+<section class="zoom-1 col-12 p-0 d-xl-none" id="push-3-mobile">
 <img src="assets/images/push-3.svg" alt="#">
 </section>
 
 
 
-<section class="col-12 p-0" id="push-3-pt2-mobile">
+<section class="col-12 p-0 d-xl-none" id="push-3-pt2-mobile">
 
   <div class="reveal-container col-10 col-lg-3 offset-1">
   <h2 class="col-12">
@@ -134,10 +134,10 @@ We elevate the workplace to be more reactive to peoples’ expectations of how t
 
 
 
-<section class="featured-projects col-12" id="featured-projects">
+<section class="featured-projects col-12 col-xl-10 offset-xl-1" id="featured-projects">
 
 
-<div class="container-p col-10 col-md-4 col-lg-3 offset-1 float-left">
+<div class="container-p col-10 col-md-4 col-lg-3 col-xl-4 offset-1 offset-xl-0 float-left">
   <div class="portfolio-list col-12 float-left">
     <a href="#">
       <div class="col-12 p-0 portfolio-image-container">
@@ -149,7 +149,7 @@ We elevate the workplace to be more reactive to peoples’ expectations of how t
 </div>
 
 
-<div class="container-p col-10 col-md-4 col-lg-3 offset-1 float-left">
+<div class="container-p col-10 col-md-4 col-lg-3 col-xl-4 offset-1 offset-xl-0 float-left">
 <div class="portfolio-list col-12 float-left">
   <a href="#">
     <div class="col-12 p-0 portfolio-image-container">
@@ -160,7 +160,7 @@ We elevate the workplace to be more reactive to peoples’ expectations of how t
 </div>
 </div>
 
-<div class="container-p col-10 col-md-4 col-lg-3 offset-1 float-left">
+<div class="container-p col-10 col-md-4 col-lg-3 col-xl-4 offset-1 offset-xl-0 float-left">
 <div class="portfolio-list col-12 float-left">
   <a href="#">
     <div class="col-12 p-0 portfolio-image-container">
@@ -176,17 +176,23 @@ We elevate the workplace to be more reactive to peoples’ expectations of how t
 
 
 
+<footer class="col-12 d-none d-xl-block">
+  <ul class="col-4">
+    <li><a href="#"><img src="assets/linkedin.svg" alt="#"></a></li>
+    <li><a href="#"><img src="assets/instagram.svg" alt="#"></a></li>
+    </ul>
 
 
+    <ul class="footer-nav col-4 offset-4">
+      <li><a href="#">BLOG</a></li>
+      <li><a href="#">NEWS</a></li>
+      <li><a href="#">CAREERS</a></li>
+      <li><a href="#">TENANT PERKS</a></li>
+      </ul>
 
+  </footer>
 
-
-
-
-
-
-
-
+<section class="col-12 d-xl-none">
         <footer class="col-12">
           <ul class="col-4 offset-1">
             <li><a href="#"><img src="assets/linkedin.svg" alt="#"></a></li>
@@ -202,7 +208,7 @@ We elevate the workplace to be more reactive to peoples’ expectations of how t
               </ul>
 
           </footer>
-
+        </section>
  </div>
 
 
