--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@ Our approach is informed by human values—namely, a desire for health and happi
 </section>
 
 
-<footer class="col-12">
-  <ul class="col-4 d-none d-xl-block">
+<footer class="col-12 d-none d-xl-block">
+  <ul class="col-4">
     <li><a href="#"><img src="assets/linkedin.svg" alt="#"></a></li>
     <li><a href="#"><img src="assets/instagram.svg" alt="#"></a></li>
     </ul>
