--- a/portfolio.html
+++ b/portfolio.html
@@ -183,25 +183,39 @@
             </div>
 
 
-
-
-
-
-          <footer class="col-12">
-            <ul class="col-4 offset-1">
-              <li><a href="#"><img src="assets/linkedin.svg" alt="#"></a></li>
-              <li><a href="#"><img src="assets/instagram.svg" alt="#"></a></li>
-              </ul>
-
-
-              <ul class="col-7">
-                <li><a href="#">BLOG</a></li>
-                <li><a href="#">NEWS</a></li>
-                <li><a href="#">CAREERS</a></li>
-                <li><a href="#">TENANT PERKS</a></li>
+            <footer class="col-12 d-none d-xl-block">
+              <ul class="col-4">
+                <li><a href="#"><img src="assets/linkedin.svg" alt="#"></a></li>
+                <li><a href="#"><img src="assets/instagram.svg" alt="#"></a></li>
                 </ul>
 
-            </footer>
+
+                <ul class="footer-nav col-4 offset-4">
+                  <li><a href="#">BLOG</a></li>
+                  <li><a href="#">NEWS</a></li>
+                  <li><a href="#">CAREERS</a></li>
+                  <li><a href="#">TENANT PERKS</a></li>
+                  </ul>
+
+              </footer>
+
+            <section class="col-12 d-xl-none">
+                    <footer class="col-12">
+                      <ul class="col-4 offset-1">
+                        <li><a href="#"><img src="assets/linkedin.svg" alt="#"></a></li>
+                        <li><a href="#"><img src="assets/instagram.svg" alt="#"></a></li>
+                        </ul>
+
+
+                        <ul class="col-7">
+                          <li><a href="#">BLOG</a></li>
+                          <li><a href="#">NEWS</a></li>
+                          <li><a href="#">CAREERS</a></li>
+                          <li><a href="#">TENANT PERKS</a></li>
+                          </ul>
+
+                      </footer>
+                    </section>
 
 
           <script>
