--- a/who-we-are.html
+++ b/who-we-are.html
@@ -88,18 +88,17 @@ We are inspired by our past, but more motivated by our future. Our identity was 
 
 <section class="col-12 p-0 d-none d-xl-block">
 <embed class="col-12 p-0" src="push-2.html" id="cover-1">
-
 </section>
 
 
-<section class="col-12 p-0 d-xl-none" id="push-mobile">
+<section class="col-12 p-0 d-xl-none d-xl-none" id="push-mobile">
 <img src="assets/images/push-2.svg" alt="#">
 </section>
 
 
 <section class="col-12 p-0 d-xl-none" id="push-2-pt2-mobile">
 
-  <div class="reveal-container col-10 col-md-8 col-lg-3 offset-1 offset-md-2">
+  <div class="reveal-container col-10 col-md-8 col-lg-3 offset-1 offset-md-2 d-xl-none">
   <h2 class="col-12">
 WHERE<br> WE'RE<br><span class="turquoise-underline">HEADING</span>
     </h2>
@@ -161,11 +160,23 @@ WHERE<br> WE'RE<br><span class="turquoise-underline">HEADING</span>
 
 
 
+<footer class="col-12 d-none d-xl-block">
+  <ul class="col-4">
+    <li><a href="#"><img src="assets/linkedin.svg" alt="#"></a></li>
+    <li><a href="#"><img src="assets/instagram.svg" alt="#"></a></li>
+    </ul>
 
 
+    <ul class="footer-nav col-4 offset-4">
+      <li><a href="#">BLOG</a></li>
+      <li><a href="#">NEWS</a></li>
+      <li><a href="#">CAREERS</a></li>
+      <li><a href="#">TENANT PERKS</a></li>
+      </ul>
 
-<section class="col-12">
+  </footer>
 
+<section class="col-12 d-xl-none">
         <footer class="col-12">
           <ul class="col-4 offset-1">
             <li><a href="#"><img src="assets/linkedin.svg" alt="#"></a></li>
@@ -181,7 +192,7 @@ WHERE<br> WE'RE<br><span class="turquoise-underline">HEADING</span>
               </ul>
 
           </footer>
-</section>
+        </section>
                 </div><!-- CLOSES SCROLL CONTAINER -->
 
 
