--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link href="css/style.css" type="text/css" rel="stylesheet">
     <link href="css/fonts/stylesheet.css" type="text/css" rel="stylesheet">
+
+    <script src="https://unpkg.com/scrollreveal"></script>
+        <script src="js/animate.js"></script>
+
+
     <title>Burns Scalo Real Estate</title>
   </head>
   <body>
@@ -59,14 +64,14 @@ Your browser does not support the video tag.
 
 
 
-<section class="col-12" id="container-2">
+<section class="second col-12" id="container-2">
 <span class="top"></span>
 
 
 
 
 
-  <h2 class="col-10 col-md-8 col-lg-4 col-xl-5 offset-1 offset-md-2 offset-xl-0">ELEVATING
+  <h2 class="is-animated col-10 col-md-8 col-lg-4 col-xl-5 offset-1 offset-md-2 offset-xl-0">ELEVATING
 <br>
 <span class="green-underline">EXPERIENCE</span></h2>
 
@@ -202,6 +207,12 @@ Our approach is informed by human values—namely, a desire for health and happi
 }
 </script>
 -->
+
+
+
+
+
+
 
 <script>
 function myFunction() {
