--- a/push-1.html
+++ b/push-1.html
@@ -28,7 +28,7 @@
 
 
   <div class="reveal-container col-10 col-lg-3 offset-1">
-  <h2 class="col-12">
+  <h2 class="reveal-1 col-12">
 PUTTING<br>PEOPLE<br><span class="turquoise-underline">FIRST</span>
     </h2>
 
@@ -39,6 +39,13 @@ Our approach is informed by human values—namely, a desire for health and happi
 
 </div>
       </section>
+
+
+      <script>
+      ScrollReveal().reveal('.reveal-1', { delay: 500 });
+      </script>
+
+
 
       <script>
 
