--- a/index.html
+++ b/index.html
@@ -53,13 +53,19 @@
       <section class="col-12" id="container-1">
         <span class="top"></span>
 
-        <video muted autoplay playsinline class="video-background" id="home-hero">
-<source src="assets/videos/hero.mp4" type="video/mp4">
+        <video muted autoplay playsinline class="video-background d-none d-lg-block" id="home-hero">
+<source src="assets/videos/home-desktop.mp4" type="video/mp4">
 <source src="movie.ogg" type="video/ogg">
 Your browser does not support the video tag.
 </video>
 
-<h1 class="col-10 offset-1"><span class="delay-1">Shaping</span><br><span class="delay-2">spaces that</span><br><span class="green-underline delay-3">shape lives.</span></h1>
+<video muted autoplay playsinline class="video-background d-lg-none">
+<source src="assets/videos/home-mobile.mp4" type="video/mp4">
+<source src="movie.ogg" type="video/ogg">
+Your browser does not support the video tag.
+</video>
+
+<h1 class="col-10 offset-1"><span class="delay-1">Shaping</span><br><span class="delay-2">spaces</span> <span class="delay-3">that</span><br><span class="green-underline delay-4">shape lives.</span></h1>
         </section>
 
 
