--- a/who-we-are.html
+++ b/who-we-are.html
@@ -11,7 +11,7 @@
     <link href="css/fonts/stylesheet.css" type="text/css" rel="stylesheet">
 
      <script src="https://unpkg.com/scrollreveal"></script>
-     
+
     <title>Burns Scalo Real Estate</title>
   </head>
   <body>
@@ -52,13 +52,19 @@
       <section class="col-12" id="container-1">
         <span class="top"></span>
 
-        <video muted autoplay playsinline class="video-background">
-<source src="assets/videos/who-we-are.mp4" type="video/mp4">
+        <video muted autoplay playsinline class="video-background d-none d-lg-block" id="home-hero">
+<source src="assets/videos/who-we-are-desktop.mp4" type="video/mp4">
 <source src="movie.ogg" type="video/ogg">
 Your browser does not support the video tag.
 </video>
 
-<h1 class="col-10 offset-1">BUILDING<br><span class="turquoise-underline">THE FUTURE</span></h1>
+<video muted autoplay playsinline class="video-background d-lg-none">
+<source src="assets/videos/home-mobile.mp4" type="video/mp4">
+<source src="movie.ogg" type="video/ogg">
+Your browser does not support the video tag.
+</video>
+
+<h1 class="col-10 offset-1"><span class="delay-1">BUILDING</span><br><span class="delay-2 turquoise-underline">THE </span><span class="delay-3 turquoise-underline">FUTURE</span></h1>
         </section>
 
 
