--- a/what-we-do.html
+++ b/what-we-do.html
@@ -49,13 +49,23 @@
       <section class="col-12" id="container-1">
         <span class="top"></span>
 
-        <video muted autoplay playsinline class="video-background">
-<source src="assets/videos/who-we-are.mp4" type="video/mp4">
+
+        <video muted autoplay playsinline class="video-background d-none d-lg-block" id="home-hero">
+<source src="assets/videos/what-we-do-desktop.mp4" type="video/mp4">
 <source src="movie.ogg" type="video/ogg">
 Your browser does not support the video tag.
 </video>
 
-<h1 class="col-10 offset-1"><span class="delay-1">We are</span><br><span class="delay-2">market</span><br><span class="green-underline delay-3">makers.</span></h1>
+<video muted autoplay playsinline class="video-background d-lg-none">
+<source src="assets/videos/home-mobile.mp4" type="video/mp4">
+<source src="movie.ogg" type="video/ogg">
+Your browser does not support the video tag.
+</video>
+
+
+
+
+<h1 class="col-10 offset-1"><span class="delay-1">We</span> <span class="delay-2">are</span><br><span class="delay-3">market</span><br><span class="orange-underline delay-4">makers.</span></h1>
 
         </section>
 
