--- a/portfolio-riviera.html
+++ b/portfolio-riviera.html
@@ -17,27 +17,27 @@
 
 
 
-      <div class="logo-container col-1 col-md-4 col-lg-2 offset-lg-3 offset-md-4 offset-lg-0 float-left">
-    <a href="index.html" class="col-12 float-left p-0"><img src="assets/mark.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
-    <a href="index.html" class="d-none d-md-2 col-12 float-left p-0"><img src="assets/logo.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
-</div>
-    <h5 class="col-8">A Luxury Real Estate Firm</h5>
+        <div class="logo-container col-1 col-xl-2 offset-lg-0 offset-lg-0 float-left">
+      <a href="index.html" class="col-12 float-left p-0 d-xl-none"><img src="assets/mark.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
+      <a href="index.html" class="d-none d-xl-block d-md-2 col-12 float-left p-0"><img src="assets/logo.svg" alt="Burns Scalo logo to home page" class="col-12 float-left"></a>
+  </div>
+      <h5 class="col-8 col-lg-4">A Luxury Real Estate Firm</h5>
 
 
-    <div class="menu-container col-1 offset-1 offset-md-3 d-lg-none">
-    <a onclick="myFunction()" class="col-12 float-left"><img src="assets/menu.svg" alt="Dropdown Menu" class="dropdown-menu-custom"></a>
-    </div>
+      <div class="menu-container col-1 offset-1 d-lg-none">
+      <a onclick="myFunction()" class="col-12 float-left"><img src="assets/menu.svg" alt="Dropdown Menu" class="dropdown-menu-custom"></a>
+      </div>
 
       </header>
 
-      <nav class="col-12" id="nav">
-        <ul class="main-nav col-10 offset-1">
+      <nav class="col-12 col-lg-10 col-xl-9 offset-lg-2 offset-xl-3" id="nav">
+        <ul class="main-nav col-10 col-lg-6 col-xl-6 offset-1 offset-xl-2">
           <li class="nav-item-1"><a href="who-we-are.html">WHO WE ARE</a></li>
           <li class="nav-item-2"><a href="what-we-do.html">WHAT WE DO</a></li>
-          <li class="nav-item-3"><a href="portfolio.html"><span id="active">PORTFOLIO</span></a></li>
+          <li class="nav-item-3" id="active"><a href="portfolio.html">PORTFOLIO</a></li>
           </ul>
 
-          <ul class="secondary-nav col-10 offset-1">
+          <ul class="secondary-nav col-10 col-lg-4 col-xl-4 offset-1 offset-lg-0">
             <li class="nav-item-4"><a href="#">SCHEDULE A TOUR</a></li>
             <li class="nav-item-5"><a href="#">MEMBERS</a></li>
             </ul>
@@ -49,12 +49,12 @@
         <span class="top"></span>
 
         <video muted autoplay playsinline class="video-background">
-<source src="assets/videos/portfolio/beacon/beacon-hero.mp4" type="video/mp4">
+<source src="assets/videos/portfolio/riviera/riviera-hero.mp4" type="video/mp4">
 <source src="movie.ogg" type="video/ogg">
 Your browser does not support the video tag.
 </video>
 
-<h1 class="col-10 offset-1"><span class="turquoise-underline">THE RIVIERA</span></h1>
+<h1 class="col-10 offset-1"><span class="portfolio-delay-1">THE</span><br><span class="turquoise-underline portfolio-delay-2">RIVIERA</span></h1>
         </section>
 
 
@@ -66,7 +66,7 @@ Your browser does not support the video tag.
 
 
 
-<div id="carouselExampleIndicators" class="col-12 carousel slide" data-bs-ride="carousel">
+<div id="carouselExampleIndicators" class="col-12 col-lg-7 col-xl-8 carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -79,31 +79,31 @@ Your browser does not support the video tag.
   <div class="carousel-inner">
 
     <div class="carousel-item active">
-      <img src="assets/images/portfolio/beacon/waldron-1.png" class="d-block w-100" alt="...">
+      <img src="assets/images/portfolio/riviera/riviera-1.png" class="d-block w-100" alt="...">
     </div>
 
     <div class="carousel-item">
-      <img src="assets/images/portfolio/beacon/waldron-2.png" class="d-block w-100" alt="...">
+      <img src="assets/images/portfolio/riviera/riviera-2.png" class="d-block w-100" alt="...">
     </div>
 
     <div class="carousel-item">
-      <img src="assets/images/portfolio/beacon/alpha-1.png" class="d-block w-100" alt="...">
+      <img src="assets/images/portfolio/riviera/riviera-3.png" class="d-block w-100" alt="...">
     </div>
 
     <div class="carousel-item">
-      <img src="assets/images/portfolio/beacon/alpha-2.png" class="d-block w-100" alt="...">
+      <img src="assets/images/portfolio/riviera/riviera-4.png" class="d-block w-100" alt="...">
     </div>
 
     <div class="carousel-item">
-      <img src="assets/images/portfolio/beacon/alpha-3.png" class="d-block w-100" alt="...">
+      <img src="assets/images/portfolio/riviera/riviera-5.png" class="d-block w-100" alt="...">
     </div>
 
     <div class="carousel-item">
-      <img src="assets/images/portfolio/beacon/careform-1.png" class="d-block w-100" alt="...">
+      <img src="assets/images/portfolio/riviera/riviera-6.png" class="d-block w-100" alt="...">
     </div>
 
     <div class="carousel-item">
-      <img src="assets/images/portfolio/beacon/careform-2.png" class="d-block w-100" alt="...">
+      <img src="assets/images/portfolio/riviera/riviera-6.png" class="d-block w-100" alt="...">
     </div>
 
 
@@ -123,17 +123,15 @@ Your browser does not support the video tag.
 
 
 
+<div class="col-12 col-lg-5 col-xl-4">
 
-
-  <h2 class="col-10 offset-1">SOUTH<br>
-
-<span class="green-underline">OAKLAND</span></h2>
-<h3 class="col-12 offset-1">160,000 SF</h3>
+  <h2 class="col-10 offset-1">
+<span class="green-underline">THE RIVIERA</span></h2>
+<h3 class="col-12 offset-1">80,000 SF</h3>
 
 
 <p class="col-10 offset-1 d-none d-lg-block">
-
-  This 6-floor, 160,000 square-foot gem of the Pittsburgh Technology Center is the Life Sci- ences hub of Pittsburgh Innovation District. Its proximity The University of Pittsburgh and Carnegie Mellon University has attracted some of the world’s innovative and pioneering research minds and organizations.
+Beacon I is the first Class-A office development inside Abele Business Park. Its 80,000 square-feet are wrapped in floor-to-ceiling glass windows and topped with solar panels, making Beacon I an exquisite combination of modern design and innovative function in office space. Tenants enjoy outdoor meeting areas, natural walking trails with fitness stations and proximity to The Piazza for lunch, and TopGolf for some happy hour fun. The project was completed in March 2018.
 </p>
 
 
@@ -157,7 +155,7 @@ Your browser does not support the video tag.
 
 
 </div>
-
+</div>
 
 
 </section>
@@ -170,14 +168,14 @@ Your browser does not support the video tag.
 
         </div><!-- CLOSES SCROLL CONTAINER -->
 
-        <footer class="col-12">
-          <ul class="col-4 offset-1">
+        <footer class="col-12 d-none d-xl-block">
+          <ul class="col-4">
             <li><a href="#"><img src="assets/linkedin.svg" alt="#"></a></li>
             <li><a href="#"><img src="assets/instagram.svg" alt="#"></a></li>
             </ul>
 
 
-            <ul class="col-7">
+            <ul class="footer-nav col-4 offset-4">
               <li><a href="#">BLOG</a></li>
               <li><a href="#">NEWS</a></li>
               <li><a href="#">CAREERS</a></li>
@@ -185,6 +183,24 @@ Your browser does not support the video tag.
               </ul>
 
           </footer>
+
+        <section class="col-12 d-xl-none">
+                <footer class="col-12">
+                  <ul class="col-4 offset-1">
+                    <li><a href="#"><img src="assets/linkedin.svg" alt="#"></a></li>
+                    <li><a href="#"><img src="assets/instagram.svg" alt="#"></a></li>
+                    </ul>
+
+
+                    <ul class="col-7">
+                      <li><a href="#">BLOG</a></li>
+                      <li><a href="#">NEWS</a></li>
+                      <li><a href="#">CAREERS</a></li>
+                      <li><a href="#">TENANT PERKS</a></li>
+                      </ul>
+
+                  </footer>
+                </section>
 
 
 <!-- DROPDOWN MENU SCRIPT
