--- a/portfolio.html
+++ b/portfolio.html
@@ -44,9 +44,7 @@
 
           </nav>
 
-          <div class="aside-toggle col-12 d-xl-none">
-          <a onclick="myFunction()" class="col-12 float-left">SEARCH FILTERS</a>
-          </div>
+
 
 
 
@@ -112,7 +110,7 @@
                 <div class="col-12 p-0 portfolio-image-container">
             <img src="assets/images/portfolio/bentley.png" alt="#">
             </div>
-            <h3>BENTLEY</h3>
+            <h3>THE BENTLEY</h3>
             <p>South Fayette Township</p>
             </a>
             </div>
@@ -235,7 +233,7 @@
                     <script src="js/jquery.2.min.js"></script>
                     <script src="js/jquery.mixitup.min.js"></script>
                     <script>
-                    
+
                         $('.containMix').mixItUp();
                     </script>
 
