--- a/portfolio-beacon.html
+++ b/portfolio-beacon.html
@@ -54,7 +54,7 @@
 Your browser does not support the video tag.
 </video>
 
-<h1 class="col-10 offset-1"><span class="turquoise-underline">BEACON I</span></h1>
+<h1 class="col-10 offset-1"><span class="portfolio-delay-1 turquoise-underline">BEACON I</span></h1>
         </section>
 
 
@@ -125,10 +125,9 @@ Your browser does not support the video tag.
 
 <div class="col-12 col-lg-5 col-xl-4">
 
-  <h2 class="col-10 offset-1">SOUTH<br>
-
-<span class="green-underline">FAYETTE</span></h2>
-<h3 class="col-12 offset-1">80,000 SF</h3>
+  <h2 class="col-10 offset-1">
+<span class="green-underline">BEACON I</span></h2>
+<h3 class="col-12 offset-1">South Fayette, 80,000 SF</h3>
 
 
 <p class="col-10 offset-1 d-none d-lg-block">
@@ -169,14 +168,14 @@ Beacon I is the first Class-A office development inside Abele Business Park. Its
 
         </div><!-- CLOSES SCROLL CONTAINER -->
 
-        <footer class="col-12">
-          <ul class="col-4 offset-1">
+        <footer class="col-12 d-none d-xl-block">
+          <ul class="col-4">
             <li><a href="#"><img src="assets/linkedin.svg" alt="#"></a></li>
             <li><a href="#"><img src="assets/instagram.svg" alt="#"></a></li>
             </ul>
 
 
-            <ul class="col-7">
+            <ul class="footer-nav col-4 offset-4">
               <li><a href="#">BLOG</a></li>
               <li><a href="#">NEWS</a></li>
               <li><a href="#">CAREERS</a></li>
@@ -184,6 +183,24 @@ Beacon I is the first Class-A office development inside Abele Business Park. Its
               </ul>
 
           </footer>
+
+        <section class="col-12 d-xl-none">
+                <footer class="col-12">
+                  <ul class="col-4 offset-1">
+                    <li><a href="#"><img src="assets/linkedin.svg" alt="#"></a></li>
+                    <li><a href="#"><img src="assets/instagram.svg" alt="#"></a></li>
+                    </ul>
+
+
+                    <ul class="col-7">
+                      <li><a href="#">BLOG</a></li>
+                      <li><a href="#">NEWS</a></li>
+                      <li><a href="#">CAREERS</a></li>
+                      <li><a href="#">TENANT PERKS</a></li>
+                      </ul>
+
+                  </footer>
+                </section>
 
 
 <!-- DROPDOWN MENU SCRIPT
